# neucoin

./: .gitignore  .travis.yml  README.md
src/: CMakeLists.txt  Makefile.default  bitcoinrpc.cpp  constants.h  keystore.cpp  keystore.h  main.cpp  main.h  net.cpp  rpcdump.cpp  script.cpp  script.h  util.cpp  util.h  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/cmake-modules/: CheckCXXSourceRunsWithOutput.cmake  Findlibdb.cmake  Findminiupnpc.cmake
src/json/: json_spirit_reader_template.h  json_spirit_value.h  json_spirit_writer_template.h
src/qt/: addresstablemodel.cpp  transactiondesc.cpp  transactionrecord.cpp
src/test/: key_tests.cpp  util_tests.cpp
test/: test-cold-minting-reorg.js
